#RI-2127, #RI-2128, #RI-2130 - fix letter-spacing #RI-2147 - fix styles for buttons #RI-2149 - change color for placeholders

--- a/redisinsight/ui/src/components/command-helper/components/command-helper-search-output/styles.module.scss
+++ b/redisinsight/ui/src/components/command-helper/components/command-helper-search-output/styles.module.scss
@@ -20,5 +20,5 @@
 }
 
 .summary, .summary div {
-  color: var(--inputPlaceHolderColor) !important;
+  color: var(--inputPlaceholderColor) !important;
 }
