--- a/redisinsight/ui/src/pages/home/components/AddInstanceControls/styles.module.scss
+++ b/redisinsight/ui/src/pages/home/components/AddInstanceControls/styles.module.scss
@@ -14,7 +14,7 @@
   padding-right: 10px;
   height: 43px;
   margin: 0 auto;
-  width: 210px;
+  width: 220px;
   text-decoration: none !important;
 
   :global(.euiButton__text) {
